--- a/courseinfo.html
+++ b/courseinfo.html
@@ -56,7 +56,7 @@
                         <div class = "section_header">
                             Homework parties: Thursday and Friday
                         </div>
-                        <div class = "section_content">
+                        <div class = "section_content course_box">
                             <p>Every week in the Wozniak Lounge, there will be a "homework party." This is completely optional. GSIs will be present in shifts as will some readers. Students are expected to help each other out, and if desired, form ad-hoc "pickup" homework groups in the style of a pickup basketball game.</p>
                             <p>The Woz is a relatively big space and if the weather is nice, we can also access the patio outside. But if the room is crowded, excercise good judgement and make room for others by leaving if you can find an alternative source of assistance. When the room is not crowded, people from the class are welcome to just hang out as long as they aren't bothering other people. Some social games might be available.</p>
                         </div>
@@ -65,7 +65,7 @@
                         <div class = "section_header">
                             Homework parties: Thursday and Friday
                         </div>
-                        <div class = "section_content">
+                        <div class = "section_content course_box">
                             <p>Discrete mathematics and probability theory provide the foundation for many algorithms, concepts, and techniques in the field of Electrical Engineering and Computer Sciences. For example, computer hardware is based on Boolean logic. Induction is closely tied to recursion and is widely used, along with other proof techniques, in theoretical arguments that are critical to understanding the foundations of many things from algorithms to control to learning to signal processing to communication to artificial intelligence. Similarly for modular arithmetic and probability theory. EECS70 will introduce you to these and other mathematical concepts. By the end of the semester, you should have a firm grasp of the theoretical basis of these concepts and their applications to general mathematical problems. In addition, you will learn how they apply to specific, important problems in the field of EECS.</p>
                             <p>This course is divided into five main units, each of which will introduce you to a particular mathematical concept as well as its applications. The units are as follows:</p>
                         </div>
