--- a/courseinfo.html
+++ b/courseinfo.html
@@ -42,9 +42,11 @@
                             Schedule
                         </div>
                     </a>
-                    <div class = "sidebar_nav_items">
-                        Course Info
-                    </div>
+                    <a href = "courseinfo.html">
+                        <div class = "sidebar_nav_items">
+                            Course Info
+                        </div>
+                    </a>
                     <div class = "sidebar_nav_items">
                         Staff
                     </div>
@@ -68,6 +70,9 @@
                         <div class = "section_content course_box">
                             <p>Discrete mathematics and probability theory provide the foundation for many algorithms, concepts, and techniques in the field of Electrical Engineering and Computer Sciences. For example, computer hardware is based on Boolean logic. Induction is closely tied to recursion and is widely used, along with other proof techniques, in theoretical arguments that are critical to understanding the foundations of many things from algorithms to control to learning to signal processing to communication to artificial intelligence. Similarly for modular arithmetic and probability theory. EECS70 will introduce you to these and other mathematical concepts. By the end of the semester, you should have a firm grasp of the theoretical basis of these concepts and their applications to general mathematical problems. In addition, you will learn how they apply to specific, important problems in the field of EECS.</p>
                             <p>This course is divided into five main units, each of which will introduce you to a particular mathematical concept as well as its applications. The units are as follows:</p>
+                        </div>
+                        <div class = "section_header">
+                            This page isn't complete...
                         </div>
                     </div>
                 </div>
