--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div id = "wrapper">
             <div id = "blocker">
-                <div>Get a bigger screen plz</div>
+                <div>Get a biggeR screen plz</div>
             </div>
             <div id = "sidebar_container">
                 <a href = "index.html">
